Solved the overflow issue relating to absolute positioned items

--- a/layout/_header.scss
+++ b/layout/_header.scss
@@ -12,6 +12,8 @@
   width: 100%;
   height: 200%;
   position: absolute;
+  left: 0;
+  right: 0;
   background: linear-gradient(
     rgba(1, 1, 1, 0),
     rgba(1, 1, 1, 0.1) 40%,
@@ -23,6 +25,8 @@
 
 .greeting-container {
   position: absolute;
+  left: 0;
+  right: 0;
   margin-top: 60px;
   width: 100%;
   display: flex;
@@ -71,12 +75,13 @@
 @media screen and (min-width: 992px) {
   .greeting-container {
     position: absolute;
-    margin: 150px 0 0 40px;
+    margin-top: 150px;
     align-items: flex-start;
   }
 
   .greeting {
     max-width: 50%;
+    margin-left: 40px;
   }
 
   .hero__arrow {
@@ -86,6 +91,10 @@
 
 @media screen and (min-width: 1200px) {
   .greeting-container {
-    margin: 40px 0 0 40px;
+    margin-top: 40px;
+  }
+
+  .greeting {
+    margin-left: 40px;
   }
 }
