--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -4,6 +4,8 @@
   width: 100%;
   height: 100px;
   position: absolute;
+  left: 0;
+  right: 0;
 
   &__links-container {
     width: 100%;
@@ -26,6 +28,8 @@
   width: 100vw;
   height: 100px;
   position: absolute;
+  left: 0;
+  right: 0;
 }
 
 @media screen and (min-width: 576px) {
