--- a/main.scss
+++ b/main.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: solid 2px red;
 }
 
 @import "abstracts/_variables";
